Update upgrade-instruction.md